<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:id="@+id/relativeLayout1" >


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:gravity="center"
            android:padding="@dimen/catch_missedCall_layout_padding"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/contact_icon"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView9" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missed_call"
                    android:id="@+id/textView10"
                    style="@style/getmissedcall_text_theme"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/getmissedcall_text2_theme"
                    android:id="@+id/textView13"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/getmissedcall_text_theme"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#d9000000"
            android:layout_height="@dimen/catch_missedCall_button_layout_height">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                style="@style/getmissedcall_buttontext_theme"
                android:text="@string/catch_call_call_contact"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:id="@+id/textView60" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                style="@style/getmissedcall_buttontext_theme"
                android:text="@string/catch_call_add_contact"
                android:id="@+id/textView3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/catch_missedCall_linearlayout_height"
            android:background="#ffffff">

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>